--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,13 @@
     <meta name="description" content="Аналитическая панель для Telegram ботов. Отслеживайте метрики, анализируйте воронки конверсии и управляйте ботами в одном месте." />
     <meta name="theme-color" content="#0f0f1a" />
     <title>Telegram Bot Dashboard</title>
+    <!-- Preconnect для ускорения подключения к API -->
+    <link rel="preconnect" href="http://localhost:8000" crossorigin />
+    <link rel="dns-prefetch" href="http://localhost:8000" />
+    
+    <!-- ОПТИМИЗАЦИЯ: Resource Hints для предзагрузки данных -->
+    <!-- Prefetch удален, так как API endpoints требуют параметров (telegram_id, bot_id) -->
+    <!-- Prefetch будет добавлен динамически в компонентах при необходимости -->
     <style>
       * {
         margin: 0;
